--- a/Bot Application1/Web.config
+++ b/Bot Application1/Web.config
@@ -7,8 +7,8 @@
   <appSettings>
     <!-- update these with your BotId, Microsoft App Id and your Microsoft App Password-->
     <add key="BotId" value="YesBot" />
-    <add key="MicrosoftAppId" value="34a76282-4816-4a33-929e-96a49c72e64c" />
-    <add key="MicrosoftAppPassword" value="O8YzNYKccBfi7RYnfezhW2h" />
+    <add key="MicrosoftAppId" value="" />
+    <add key="MicrosoftAppPassword" value="" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -19,7 +19,7 @@
       </system.Web>
   -->
   <system.web>
-    <customErrors mode="Off" /> 
+    <customErrors mode="Off" />
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
   </system.web>
@@ -30,7 +30,7 @@
         <add value="default.htm" />
       </files>
     </defaultDocument>
-    
+
   <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
